--- a/style.css
+++ b/style.css
@@ -183,3 +183,23 @@ html, body {
   .wrapper .inside .contents p {
     font-size: 13px;
   }
+  /*###### products List ####*/
+
+  .product-card {
+    border: 1px solid #ccc;
+    padding: 16px;
+    margin: 16px;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+}
+.product-card .material-icons {
+    font-size: 24px;
+}
+.product-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
