--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html, body {
 .product-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .wrapper {
@@ -222,10 +223,32 @@ html, body {
   width: 100%;
 }
 
-.wrapper .inside .contents h1, .wrapper .inside .contents p, .wrapper .inside .contents table {
+.wrapper .inside .contents h1,
+.wrapper .inside .contents p,
+.wrapper .inside .contents table {
   color: white;
 }
 
 .wrapper .inside .contents p {
   font-size: 13px;
 }
+
+/* Responsive styling */
+@media (max-width: 600px) {
+  .product-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 15px;
+  }
+
+  .wrapper {
+    width: calc(50% - 30px);
+    margin: 15px;
+  }
+
+  .product-list-wrapper {
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+}
+
